fix logo, check and cross alignment

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ h3{
     display: inline-block;
     font-size: 48px;
     font-weight: 900;
+    text-align: center;
+    vertical-align: 15%;
 }
 /* /containter */
 .container{
@@ -58,6 +60,7 @@ main>div{
     color: green;
     width: 20px;
     height: 20px;
+    text-align: center;
     }
     .cross{
     display: inline-block;
@@ -68,6 +71,7 @@ main>div{
     color: red;
     width: 20px;
     height: 20px;
+    text-align: center;
     }
     .bookmark{
         display: inline-block;
